--- a/index.pug
+++ b/index.pug
@@ -5,11 +5,15 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1.0')       
         // Tocas UI 
         link(href='//cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.css',rel='stylesheet')
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.js")
+        script(src="//cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.js")
         // JQ 
         script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js')
         // axios 
         script(src='//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js')
+        // 編碼轉換
+        script(src="//cdnjs.cloudflare.com/ajax/libs/jschardet/1.4.1/jschardet.min.js")
+        script(src="//cdn.rawgit.com/inexorabletash/text-encoding/4d1b5456/lib/encoding-indexes.js")
+        script(src="//cdn.rawgit.com/inexorabletash/text-encoding/4d1b5456/lib/encoding.js")
         // index 
         link(href='./index.css',rel='stylesheet')
         script(src="./index.js")
