--- a/index.sass
+++ b/index.sass
@@ -1,4 +1,7 @@
-
+#preview>pre
+    max-height: 250px
+    overflow: hidden
+    overflow-y: scroll
 #uploader 
     margin-top: 25px
     padding: 0em
