--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+#preview > pre {
+  max-height: 250px;
+  overflow: hidden;
+  overflow-y: scroll; }
+
 #uploader {
   margin-top: 25px;
   padding: 0em;
